Bug 398333 - Selection mode cursors not updating when using shortcuts
Summary: Selection mode cursors not updating when using shortcuts
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-06 18:21 UTC by mvowada
Modified: 2018-09-10 11:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video (333.87 KB, video/mp4)
2018-09-06 18:21 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-09-06 18:21:19 UTC
Created attachment 114816 [details]
Video

(Ubuntu 14.04, Unity - Krita Appimage 4.2.0-pre-alpha (git 65a1598))

Hi and thanks for this useful feature :)
It seems that the cursor icons (+/-) are not updating when using the key shortcuts:

    1. add to a selection
    2. press the "ALT" key (subtract)

Actual Results: the cursor is "+"
Expected Results: cursor "-"? 

(original wishbug: Bug 385861)
Comment 1 Dmitry Kazakov 2018-09-09 15:01:43 UTC
Git commit 6e809bc8076cf876b2a65c289a27a180ee56061f by Dmitry Kazakov.
Committed on 09/09/2018 at 15:01.
Pushed by dkazakov into branch 'master'.

Fix selection cursor update when modifier is presses

M  +17   -0    libs/ui/tool/kis_tool_select_base.h

https://commits.kde.org/krita/6e809bc8076cf876b2a65c289a27a180ee56061f
Comment 2 mvowada 2018-09-10 11:31:33 UTC
It works very well, thanks!