Fix selection cursor update when modifier is presses

BUG:398333